--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -45,7 +45,7 @@ jobs:
           path: |
             src/bindings/compiled
             src/bindings/mina-transaction/gen
-          key: bindings-${{ github.run_id }}
+          key: bindings-${{ github.sha }}
       - name: generate tar
         run: |
           nix build o1js#bindings-tar --out-link bindings.tar.gz
