--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -46,7 +46,8 @@ jobs:
             src/bindings/compiled
             src/bindings/mina-transaction/gen
           key: bindings-${{ github.sha }}
-
+          lookup-only: true
+          fail-on-cache-miss: true
       - name: Cache dependencies and build
         uses: actions/cache@v4
         id: cache
