--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -46,6 +46,7 @@ jobs:
             src/bindings/compiled
             src/bindings/mina-transaction/gen
           key: bindings-${{ github.sha }}
+          save-always: true
       - name: generate tar
         run: |
           nix build o1js#bindings-tar --out-link bindings.tar.gz
