--- a/.github/workflows/live-tests.yml
+++ b/.github/workflows/live-tests.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Wait for bindings-cache
         uses: fountainhead/action-wait-for-check@v1.2.0
         with:
-          checkName: "build-bindings"
+          checkName: "nix-build"
           ref: ${{ github.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Restore bindings-cache
@@ -79,7 +79,7 @@ jobs:
       - name: Wait for bindings-cache
         uses: fountainhead/action-wait-for-check@v1.2.0
         with:
-          checkName: "build-bindings"
+          checkName: "nix-build"
           ref: ${{ github.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Restore bindings-cache
