--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Wait for bindings-cache
         uses: fountainhead/action-wait-for-check@v1.2.0
         with:
-          checkName: "build-bindings"
+          checkName: "nix-build"
           ref: ${{ github.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Restore bindings-cache
