--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
   check-npm-deps:
-    name: build-bindings
+    name: check npmDepsHash is correct
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
       - name: Set up Nix
@@ -37,7 +37,7 @@ jobs:
           allow_new_files: 'true'
 
   nix-build:
-    name: build-bindings
+    name: build and cache bindings
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
       - name: Set up Nix
@@ -64,7 +64,7 @@ jobs:
 
   # seperate job because the rest of ci has to wait on the above job
   upload-bindings:
-    name: build-bindings
+    name: upload bindings artifact
     needs: nix-build
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
