try listing checks to see what's wrong with the wait action

--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -77,6 +77,8 @@ jobs:
           submodules: recursive
       - name: generate tar
         run: |
+          set -Eeu
+          ./pin.sh
           nix build o1js#bindings-tar --out-link bindings.tar.gz
       - name: Upload bindings
         uses: actions/upload-artifact@v4
