--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -33,6 +33,13 @@ jobs:
         with:
           node-version: '20'
 
+      - name: List checks via API
+        run: |
+          gh api repos/${{ github.repository }}/commits/${{ github.sha }}/check-runs \
+          --jq '.check_runs[] | .name'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Wait for bindings-cache
         uses: fountainhead/action-wait-for-check@v1.2.0
         with:
