--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: List checks via API
         run: |
-          gh api repos/${{ github.repository }}/commits/${{ github.sha }}/check-runs \
+          gh api repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha || github.sha }}/check-runs \
           --jq '.check_runs[] | .name'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -44,7 +44,7 @@ jobs:
         uses: fountainhead/action-wait-for-check@v1.2.0
         with:
           checkName: "nix-build"
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Restore bindings-cache
         uses: actions/cache@v4
