try waiting for display name

--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Wait for bindings-cache
         uses: fountainhead/action-wait-for-check@v1.2.0
         with:
-          checkName: "nix-build"
+          checkName: "build and cache bindings"
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Restore bindings-cache
