--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -14,6 +14,8 @@ concurrency:
 
 jobs:
   check-npm-deps:
+    if: github.event_name == 'pull_request'  # Runs only for PRs
+    runs-on: ubuntu-latest
     name: check npmDepsHash is correct
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
