--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -34,12 +34,12 @@ jobs:
           git restore flake.lock # prevents suggesting changes to the flake.lock
       - uses: Geometer1729/suggest-changes@main
         with:
-          comment: 'please commit the npmDepsHash change'
-          event: 'REQUEST_CHANGES'
-          allow_new_files: 'true'
+          comment: please commit the npmDepsHash change
+          event: REQUEST_CHANGES
+          allow_new_files: true
 
   nix-build:
-    name: build and cache bindings
+    name: build-bindings-ubuntu
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
       - name: Set up Nix
