add ref to checkout action to fix download

--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          ref: ${{ github.sha }}
 
       - name: Setup Node
         uses: actions/setup-node@v4
