--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -37,7 +37,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          RUN_ID=$(gh run list --workflow "Build bindings" --json databaseId,headSha --jq '.[] | select(.headSha == "${{ github.sha }}") | .databaseId')
+          RUN_ID=$(gh run list --workflow "Build bindings" --json databaseId,headSha --jq '.[] | select(.headSha == "${{ github.pull_request.base.sha || github.sha }}") | .databaseId')
           gh run watch $RUN_ID --interval 5 --exit-status
 
       - name: Restore bindings-cache
