--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -31,6 +31,7 @@ jobs:
           ./pin.sh
           nix run o1js#update-npm-deps
           git restore flake.lock # prevents suggesting changes to the flake.lock
+          git diff npmDepsHash
       - uses: Geometer1729/suggest-changes@main
         with:
           comment: please commit the npmDepsHash change
