--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -44,7 +44,7 @@ jobs:
           path: |
             src/bindings/compiled
             src/bindings/mina-transaction/gen
-          key: bindings-${{ github.sha }}
+          key: bindings-${{ github.event.pull_request.head.sha || github.sha }}
           fail-on-cache-miss: true
       - name: Cache dependencies and build
         uses: actions/cache@v4
