--- a/.github/workflows/pkg-pr-new-publish.yml
+++ b/.github/workflows/pkg-pr-new-publish.yml
@@ -25,26 +25,13 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Wait for bindings-cache
-        uses: fountainhead/action-wait-for-check@v1.2.0
-        with:
-          checkName: "build-bindings-ubuntu"
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Restore bindings-cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            src/bindings/compiled
-            src/bindings/mina-transaction/gen
-          key: bindings-${{ github.event.pull_request.head.sha || github.sha }}
-          # restore-keys widens the scope searched
-          restore-keys: bindings-${{ github.event.pull_request.head.sha || github.sha }}
-
       - name: Build o1js and mina-signer
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           GIT_LFS_SKIP_SMUDGE=1 git submodule update --init --recursive
           npm ci
+          npm run build:bindings-download
           npm run prepublishOnly
           cd src/mina-signer
           npm ci
