--- a/.github/workflows/pkg-pr-new-publish.yml
+++ b/.github/workflows/pkg-pr-new-publish.yml
@@ -36,5 +36,5 @@ jobs:
           cd src/mina-signer
           npm ci
           npm run prepublishOnly
-      #- name: Publish o1js and mina-signer on pkg-pr-new
-      #  run: npx pkg-pr-new publish ./ ./src/mina-signer # Enable `--compact` once published to NPM with `repository` in package.json
+      - name: Publish o1js and mina-signer on pkg-pr-new
+        run: npx pkg-pr-new publish ./ ./src/mina-signer # Enable `--compact` once published to NPM with `repository` in package.json
