--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git fetch origin main --depth=1
           # TODO ideally lint the non-generated files in src/bindings/
-          CHANGED_FILES=$(git diff --name-only origin/main | grep -E '\.(ts|js)$' | grep -v 'src/bindings/*' || true)
+          CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.ref }} | grep -E '\.(ts|js)$' | grep -v 'src/bindings/*' || true)
 
           if [ -n "$CHANGED_FILES" ]; then
             echo "Files changed:"
