--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ result
 # precompiled bindings
 src/bindings/compiled
 # allows dune and README.md
-src/bindings/mina-transaction/gen/*.js
-src/bindings/mina-transaction/gen/*.ts
+src/bindings/mina-transaction/gen/*/*.js
+src/bindings/mina-transaction/gen/*/*.ts
 .bindings_download
