--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,6 +1,4 @@
-# This is the slowest part of the CI now so I think it's better to just do it daily
-# instead of every commit
-name: Clean nix store
+name: Nightly
 
 on:
   schedule:
@@ -12,6 +10,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  # This is the slowest part of the CI now so I think it's better to just do it daily
+  # instead of every commit
   nix-cleanup:
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
