--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -1,24 +1,19 @@
 name: nix
 on:
   workflow_dispatch:
-    inputs:
-      name:
-        description: 'Commit nix fixes'
-        default: 'World'
-        required: true
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  nix-fixes:
+  nix-cleanup:
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
       - name: Set up Nix
         run: echo "PATH=$PATH:/nix/var/nix/profiles/default/bin" >> $GITHUB_ENV
-      - name: Disable smudging
-        run: echo "GIT_LFS_SKIP_SMUDGE=1" >> $GITHUB_ENV
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
+      - name: Cleanup the Nix store
+        run: |
+          nix-store --optimise
+          nix-store --gc --print-dead
+
