use checkout before local actions

--- a/.github/actions/unit-test/action.yml
+++ b/.github/actions/unit-test/action.yml
@@ -5,6 +5,10 @@ runs:
   using: "composite"
   steps:
     - name: build
+      - name: Checkout repository with submodules
+        uses: actions/checkout@v4
+        with:
+        submodules: recursive
       uses: ./.github/actions/build
 
     - name: Count tests
