--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -20,6 +20,10 @@ jobs:
   Prepare:
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
+      - name: Checkout repository with submodules
+        uses: actions/checkout@v4
+        with:
+        submodules: recursive
       - name: Build
         uses: ./.github/actions/build
 
