--- a/.github/workflows/check-for-typos.yml
+++ b/.github/workflows/check-for-typos.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Run codespell
         uses: codespell-project/actions-codespell@master
         with:
-          skip: "*.json,./node_modules,./dist,./.husky,./.git,./src/mina/**/*,./src/bindings/**/*"
+          skip: "*.json,./node_modules,./dist,./.husky,./.git,./src/mina/**/*,./src/bindings/compiled/**/*"
           exclude_file: "./src/lib/provable/test/blake2b.unit-test.ts"
           check_hidden: false
           ignore_words_list: "tHi,modul,optin,deriver,PRing,toWords,iSelf"
