--- a/.github/workflows/check-for-typos.yml
+++ b/.github/workflows/check-for-typos.yml
@@ -1,23 +1,32 @@
 name: Check for Typos
 # This workflow runs codespell to check for common misspellings in the codebase.
-
 on:
   pull_request:
-  push:
-    branches:
-      - main
-      - v3
+    types: [assigned, opened, synchronize, reopened, labeled, unlabeled]
   workflow_dispatch: {}
 
 jobs:
   codespell:
     runs-on: ubuntu-latest
+    # Skip the job if the PR has the specified tag/label
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'no typo check') }}
     steps:
       - uses: actions/checkout@v4
-      - name: Run codespell
+      - name: Get changed files
+        id: changed-files
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "files=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | tr '\n' ' ')" >> $GITHUB_OUTPUT
+          else
+            echo "files=." >> $GITHUB_OUTPUT
+          fi
+      
+      - name: Run codespell on changed files
         uses: codespell-project/actions-codespell@master
         with:
-          skip: "*.json,./node_modules,./dist,./.husky,./.git,./src/mina/**/*,./src/bindings/compiled/**/*"
-          exclude_file: "./src/lib/provable/test/blake2b.unit-test.ts"
+          check_filenames: true
+          path: ${{ steps.changed-files.outputs.files }}
+          skip: "*.json,./node_modules,./dist,./.husky,./.git,./src/mina/**/*,./src/bindings/**/*"
           check_hidden: false
           ignore_words_list: "tHi,modul,optin,deriver,PRing,toWords,iSelf"
+          
