--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -21,8 +21,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-          fetch-depth: 0
-          clean: true
+      - name: try to fix bindings corruption
+        run: |
+          git submodule deinit -f src/bindings
+          git submodule sync
+          git submodule update --init --recursive
       - name: Set up Nix
         run: echo "PATH=$PATH:/nix/var/nix/profiles/default/bin" >> $GITHUB_ENV
       - name: Disable smudging
