try to remove submodule in ci

--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -23,8 +23,8 @@ jobs:
           submodules: recursive
       - name: try to fix bindings corruption
         run: |
-          ls -R .git/modules/src
-          ls -R .git/modules/
+          git config -f .gitmodules --remove-section submodule."src/bindings"
+          rm -rf .git/modules/o1js-bindings
       - name: Set up Nix
         run: echo "PATH=$PATH:/nix/var/nix/profiles/default/bin" >> $GITHUB_ENV
       - name: Disable smudging
